--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "prueba",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
+    "build":"parcel build src/index.html",
     "servidor": "http-server -c-1"
   },
   "keywords": [],
